--- a/settings.gradle
+++ b/settings.gradle
@@ -129,6 +129,126 @@ include 'java_software_engineer:lesson_24_single_responcibility_principle:step_1
 include 'java_software_engineer:lesson_25_currency_conversion_service'
 include 'java_software_engineer:lesson_26_url_shortening_service'
 
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_1'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_2'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_3'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_4'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_5'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_6'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_7'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_8'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_9'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_10'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_11'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_12'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_13'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_14'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_15'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_16'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_17'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_18'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_19'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_20'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_21'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_22'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_23'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_24'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_25'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_26'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_27'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_28'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_29'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_30'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_31'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_32'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_33'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_34'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_35'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_36'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_37'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_38'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_39'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_40'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_41'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_42'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_43'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_44'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_45'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_46'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_47'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_48'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_49'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_50'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_51'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_52'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_53'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_54'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_55'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_56'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_57'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_58'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_59'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_60'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_61'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_62'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_63'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_64'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_65'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_66'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_67'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_68'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_69'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_70'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_71'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_72'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_73'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_74'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_75'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_76'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_77'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_78'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_79'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_80'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_81'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_82'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_83'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_84'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_85'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_86'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_87'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_88'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_89'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_90'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_91'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_92_version_1'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_93_version_2'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_94_version_2'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_95_version_2'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_96_version_2'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_97_version_2'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_98_version_2'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_99_version_2'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_100_version_2'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_101_version_2'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_102_version_2'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_103_version_2'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_104_version_2'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_105_version_2'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_106_version_2'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_107_version_2'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_108_version_2'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_109_version_2'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_110_version_2'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_111_version_2'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_112_version_2'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_113_version_2'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_114_version_2'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_115_version_2'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_116_version_2'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_117_version_2'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_118_version_2'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_119_version_2'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_120_version_2'
 
 include 'apple_warehouse:step_1'
 include 'apple_warehouse:step_2'
