--- a/settings.gradle
+++ b/settings.gradle
@@ -250,6 +250,8 @@ include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_118_v
 include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_119_version_2'
 include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_120_version_2'
 
+include 'java_software_engineer:lesson_28_tennis_scoreboard'
+
 include 'apple_warehouse:step_1'
 include 'apple_warehouse:step_2'
 include 'apple_warehouse:step_3'
