--- a/settings.gradle
+++ b/settings.gradle
@@ -251,6 +251,7 @@ include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_119_v
 include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_120_version_2'
 
 include 'java_software_engineer:lesson_28_tennis_scoreboard'
+include 'java_software_engineer:lesson_29_weather_forecast'
 
 include 'apple_warehouse:step_1'
 include 'apple_warehouse:step_2'
