--- a/settings.gradle
+++ b/settings.gradle
@@ -533,3 +533,4 @@ include 'trevel_insurance_calculator:step_117_version_2'
 include 'trevel_insurance_calculator:step_118_version_2'
 include 'trevel_insurance_calculator:step_119_version_2'
 include 'trevel_insurance_calculator:step_120_version_2'
+include 'trevel_insurance_calculator:step_121_version_2'
