code review step 20

--- a/settings.gradle
+++ b/settings.gradle
@@ -149,6 +149,7 @@ include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_17'
 include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_18'
 include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_19'
 include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_20'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_20_code_review'
 include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_21'
 include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_22'
 include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_23'
