--- a/settings.gradle
+++ b/settings.gradle
@@ -170,6 +170,7 @@ include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_37'
 include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_38'
 include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_39'
 include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_40'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_40_code_review'
 include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_41'
 include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_42'
 include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_43'
