step 8_1 agreementPrice calculation part 1

--- a/settings.gradle
+++ b/settings.gradle
@@ -140,6 +140,7 @@ include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_5'
 include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_6'
 include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_7'
 include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_8'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_8_1'
 include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_9'
 include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_10'
 include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_11'
