--- a/settings.gradle
+++ b/settings.gradle
@@ -142,6 +142,7 @@ include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_7'
 include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_8'
 include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_8_1'
 include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_8_2'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_8_3'
 include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_9'
 include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_10'
 include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_11'
