--- a/settings.gradle
+++ b/settings.gradle
@@ -144,6 +144,7 @@ include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_8_1'
 include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_8_2'
 include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_8_3'
 include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_8_4'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_8_5'
 include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_9'
 include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_10'
 include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_11'
