--- a/settings.gradle
+++ b/settings.gradle
@@ -164,6 +164,7 @@ include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_28_1'
 include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_28_2'
 include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_28_3'
 include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_28_4'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_28_5'
 include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_29'
 include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_30'
 include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_31'
