--- a/settings.gradle
+++ b/settings.gradle
@@ -167,6 +167,7 @@ include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_28_4'
 include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_28_5'
 include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_28_6'
 include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_28_7'
+include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_28_8'
 include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_29'
 include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_30'
 include 'java_software_engineer:lesson_27_trevel_insurance_calculator:step_31'
